[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/helper/Chain.gd" type="Script" id=1]
[ext_resource path="res://scenes/helper/CurvyPath.gd" type="Script" id=2]
[ext_resource path="res://scenes/helper/AttackableNode.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/casting/Line.gd" type="Script" id=4]
[ext_resource path="res://scenes/casting/CastBobber.gd" type="Script" id=5]
[ext_resource path="res://scenes/helper/PathwalkerWithDetection.gd" type="Script" id=6]
[ext_resource path="res://scenes/casting/Casting.gd" type="Script" id=10]

[sub_resource type="Curve3D" id=2]
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[sub_resource type="SphereShape" id=8]
margin = 0.127
radius = 0.20265

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.968627, 0.921569, 0.537255, 1 )

[sub_resource type="ShaderMaterial" id=10]

[node name="Casting" type="Spatial"]
script = ExtResource( 10 )

[node name="Chain" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="CastPath" type="Path" parent="."]
curve = SubResource( 2 )
script = ExtResource( 2 )

[node name="DetectingPathwalker" type="PathFollow" parent="CastPath"]
script = ExtResource( 6 )
walkSpeed = 24.0
maskBit = 1

[node name="Area" type="Area" parent="CastPath/DetectingPathwalker"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="CastPath/DetectingPathwalker/Area"]
shape = SubResource( 8 )

[node name="Bobber" type="Spatial" parent="CastPath/DetectingPathwalker"]
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="CastPath/DetectingPathwalker/Bobber"]
mesh = SubResource( 1 )

[node name="AttackableNode" parent="CastPath/DetectingPathwalker/Bobber" instance=ExtResource( 3 )]

[node name="CastLine" type="ImmediateGeometry" parent="."]
material_override = SubResource( 9 )
script = ExtResource( 4 )
drawCorners = false
readyToJumpShader = SubResource( 10 )

[connection signal="castdone" from="." to="CastPath/DetectingPathwalker/Bobber" method="_on_Casting_castdone"]
[connection signal="castdone" from="." to="CastLine" method="_on_Casting_castdone"]
[connection signal="area_entered" from="CastPath/DetectingPathwalker/Area" to="CastPath/DetectingPathwalker" method="_on_Area_area_entered"]
[connection signal="body_entered" from="CastPath/DetectingPathwalker/Area" to="CastPath/DetectingPathwalker" method="_on_Area_body_entered"]
[connection signal="attacked" from="CastPath/DetectingPathwalker/Bobber/AttackableNode" to="CastPath/DetectingPathwalker/Bobber" method="_on_AttackableNode_attacked"]
